--- a/templates/rcpmeeting.html
+++ b/templates/rcpmeeting.html
@@ -403,6 +403,8 @@
             </div>
         </div>
     </div>
+</body>
+</html>
     <script type="module" src="../js/main.js"></script>
     <script type="module">
         import { dataService } from '/js/services/DataService.js';
@@ -844,4 +846,4 @@
         }
     </script>
     <!-- Removed duplicate load of main.js -->
-</html>
+
