Exporteateur de données au format JSON

--- a/templates/charges.html
+++ b/templates/charges.html
@@ -175,6 +175,7 @@
                 </form>
             </div>
             <div class="modal-footer">
+                <button class="btn btn-secondary" id="btn-export-charges">Exporter les données</button>
                 <button class="btn btn-primary" id="btn-save-add-charge">Ajouter</button>
                 <button class="btn btn-danger modal-close">Annuler</button>
             </div>
