--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,17 @@ header {
     background-color: #c82333;
 }
 
+.btn-secondary {
+    background-color: var(--background-white);
+    color: var(--text-secondary);
+    border: 1px solid var(--border-color);
+}
+
+.btn-secondary:hover {
+    background-color: var(--background-light);
+    border-color: var(--text-secondary);
+}
+
 /* Tableaux */
 .table-container {
     background-color: white;
