Remove exporter les données de la page paramètres

--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,11 @@ header {
     cursor: pointer;
 }
 
+.modal-header .modal-close {
+    background: none;
+    background-color: transparent;
+}
+
 .modal-body {
     padding: 20px;
 }
